# skill-building

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
cn2en/: SKILL.md
cn2en/log/: summary-2026-02-06-01.md  summary-2026-02-06-02.md  summary-2026-02-06-03.md
cn2en/scripts/: append_glossary.py
cn2en/tests/: expected.en.md  test_append_glossary.py  test_extract_insert.py
html2md/: STATUS.md
html2md/tests/: conftest.py  test_pipeline_content.py  test_summarize_update.py  test_topic_filter.py  test_validate.py
mdcn2en/: STATUS.md
mdcn2en/log/: summary-2026-02-06-01.md  summary-2026-02-06-02.md  summary-2026-02-06-03.md  summary-2026-02-06-04.md
mdcn2en/tests/: input.zh.md  test_append_glossary.py  test_extract_insert.py
