[project]
name = "web-access-automation-with-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "jinja2>=3.1.6",
    "langdetect>=1.0.9",
    "lxml>=6.0.2",
    "markdownify>=1.2.2",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "readability-lxml>=0.8.4.1",
    "requests>=2.32.5",
    "trafilatura>=2.0.0",
]
